@@ -9,21 +9,27 @@
 		* Preferences class, just a helper for SharedPreferences
 		* Sprite.clearModifiers()
 		* RokonActivity.setGameSize(width, height, force) Can force width/height to remain as given, setGameSize(width, height) now assumes fixed aspect and adjusts
+		* Scene has a couple of abstract methods that must be overriden, onReady onResume onPause
+		* Vibrator now has an enable() and disable(), to prevent the phone from being vibrated. The default state, is enabled
 	
 	Changes
 		* DrawableObject.isOnScreen() returns FALSE if it is not added to a Layer
-		* Modifier and some of its methods are now abstract (to force override). The parameters of onStart and onEnd changed.
+		* Modifier and some of its methods are now abstract (to force override). The parameters of onStart and onEnd changed
+		* RokonActivity.getScene() is now static
+		* RokonMusic is no longer automatically paused/resumed, this must be hanled manually (to allow transition between Activities)
 	
 	Bug Fixes
-		* Drawable is now public, previously was not. This prevented 'onTouch(Drawable' methods from being used.
+		* Drawable is now public, previously was not. This prevented 'onTouch(Drawable' methods from being used
 		* Point.getY() returned wrong value if it had a parent
 		* DrawableObjet.setSize did not modify height
 		* TextSprite was being silly, and was looking for FontTexture intead of TextTexture
 		* PhysicalSprite did not take into account current rotaton when creating its Body 
 		* TextureAtlas was overlapping inserted Textures
 		* Touchables are now checked against their rotated position, previously rotation wasn't considered
-		* Fixed an issue with the Activity lifecycle, it should now properly reload textures / resume last position in the game when hidden/destroyed
+		* Fixed an issue with the Activity lifecycle, it should now properly reload textures / resume last position in the game when hidden / destroyed
 		* Now works on the emulator, unsure where the bug was. Somewhere in this update!
+		* Scene.pausePhysics() and Scene.resumePhysics() now work properly. Previously, it would cause unpredictable stuff in Box2D.
+		* GameObject.isTouchable() would not take into consideration whether or not the object had been made invisible. Touchables must now be visible to be touched
 
 30/06/10 - 2.0.2
 	Another quick minor update, sorry for having so many packed together - obviously with the new release came a few unexpected bugs.
